--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
         .grid-bg {
-        background-color: #111111;
+        background-color: #000;
         background-image: 
             linear-gradient(rgba(50, 50, 50, 0.1) 1px, transparent 1px),
             linear-gradient(90deg, rgba(50, 50, 50, 0.1) 1px, transparent 1px);
@@ -2490,8 +2490,8 @@ Unlocking Potential.<br></h1><span
                         </a></div>
                     <div class="hero-metal-cont absolute left-0 top-[-15%] z-[1] max-w-[350px]  -950:max-w-[200px] -768:top-[-10%] -500:top-[-3%] -500:max-w-[170px] overflow-hidden"
                         style="translate: none; rotate: none; scale: none; transform: translate3d(0px, 19.9891px, 0px);">
-                        <img src="/assets/hero-bg-1-B_FbBNmD.png" class="floating hero-metal-1" alt=""
-                            style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;">
+                        <!-- <img src="/assets/hero-bg-1-B_FbBNmD.png" class="floating hero-metal-1" alt=""
+                            style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;"> -->
                     </div>
                     <style>
                         @keyframes float {
@@ -2512,8 +2512,8 @@ Unlocking Potential.<br></h1><span
                     </style>
                     <div class="hero-metal-cont absolute right-0 top-[0%] z-[1] max-w-[350px] -950:max-w-[200px] -768:hidden overflow-hidden"
                         style="translate: none; rotate: none; scale: none; transform: translate3d(0px, 19.9891px, 0px);">
-                        <img src="/assets/hero-bg-2-CUR4E7eH.png" class="floating hero-metal-2" alt=""
-                            style="translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);">
+                        <!-- <img src="/assets/hero-bg-2-CUR4E7eH.png" class="floating hero-metal-2" alt=""
+                            style="translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);"> -->
                     </div>
                     
                      <video src="/assets/loop.mp4" playsinline muted autoplay loop
@@ -3218,7 +3218,7 @@ Unlocking Potential.<br></h1><span
                 <section class="relative flex flex-col justify-center items-center gap-5 mt-[66px] -500:mt-[46px] px-3">
                     <!-- BACKGROUND METAL IMAGE -->
                     <div class="hero-metal-cont absolute left-0 z-[-1] max-w-[350px] -950:max-w-[200px] -768:top-[-10%] -500:top-[-3%] -500:max-w-[170px] overflow-hidden">
-                      <img src="/assets/hero-bg-1-B_FbBNmD.png" class="floating hero-metal-1" alt="">
+                      <!-- <img src="/assets/hero-bg-1-B_FbBNmD.png" class="floating hero-metal-1" alt=""> -->
                     </div>
                   
                     <!-- FOREGROUND CONTENT -->
