--- a/index.html
+++ b/index.html
@@ -3414,10 +3414,10 @@
                   JOIN COMMUNITY
                 </p>
               
-                <a href="#" class="relative z-20 text-white btn-arrow flex gap-2 items-center justify-center border border-white/80 font-bold rounded-2xl px-10 py-4 -500:text-sm -500:mt-8 autobot-btn">
+                <!-- <a href="#" class="relative z-20 text-white btn-arrow flex gap-2 items-center justify-center border border-white/80 font-bold rounded-2xl px-10 py-4 -500:text-sm -500:mt-8 autobot-btn">
                   <p>Get Started</p>
                 </a>
-              
+               -->
                 <!-- 4) Decorative images -->
                 <img src="/assets/autobot-metal-1.png" alt="" class="absolute left-0 top-[10%] max-w-[260px] floating z-20 -500:hidden hero-metal-cont">
                 <img src="/assets/autobot-metal-2.png" alt="" class="absolute right-0 bottom-0 max-w-[500px] floating z-20 -500:hidden hero-metal-cont">
