--- a/index.html
+++ b/index.html
@@ -3419,10 +3419,10 @@
                 </a>
                -->
                 <!-- 4) Decorative images -->
-                <img src="/assets/autobot-metal-1.png" alt="" class="absolute left-0 top-[10%] max-w-[260px] floating z-20 -500:hidden hero-metal-cont">
+                <!-- <img src="/assets/autobot-metal-1.png" alt="" class="absolute left-0 top-[10%] max-w-[260px] floating z-20 -500:hidden hero-metal-cont">
                 <img src="/assets/autobot-metal-2.png" alt="" class="absolute right-0 bottom-0 max-w-[500px] floating z-20 -500:hidden hero-metal-cont">
                 <img src="/assets/autobot-metal-mobile.png" alt="" class="absolute right-0 bottom-0 hidden -500:block z-20 hero-metal-cont">
-              
+               -->
                 <!-- 5) Decorative line -->
                 <div class="autobot-line absolute top-0 left-1/2 -translate-x-1/2 floating h-[2px] w-[50%] z-20"></div>
               </section>
